css/story.css
body {
  background-color: #D3DDE3;
}

h1 {
  text-align: center;
  text-shadow: 2px 2px 2px #000000;
  color: #46b8da;
}


#page {
  background-color: white;
  font-size: 1.95em;
  margin-top: 10px;
  border-radius: 6px;
  padding-bottom: 12px;
  text-align: left;
  text-indent: 20px;
  border-width: 5px;
  border-style: solid;
  border-color: rgb(0, 0, 0);
}
/*#page, input{
  color: green;
}*/

/* Style for the end */
 .end {
  text-align: center;
  font-weight: bold;
  margin: 20px;
 }

 .button {
  text-align: center;
 }

/*.name{
  font color: red;
 }*/

